# Burngine

./: .gitignore  CMakeLists.txt  README.md
Debug/: makefile  sources.mk
Debug/src/Burngine/System/: NonCopyable.d  NonInstancable.d  subdir.mk
Debug/src/Burngine/Window/: Window.d  WindowImpl.d  subdir.mk
Shaders/: blur.fs  blur.vs  color.fs  color.vs  directionalLight.fs  finalize.fs  finalize.vs  font2D.fs  font2D.vs  glow.fs  glow.vs  meshDiffuse.fs  meshDiffuse.vs  pointLight.fs  pointLight.vs  skybox.fs  skybox.vs  spotLight.fs  sprite2D.vs  texture.fs  texture.vs  vsm.fs  vsm.vs
examples/: CMakeLists.txt
examples/data/: annotation.tga  ball.3ds  burnshaders  gear.3ds  gear.mtl  ground.mtl
examples/data/f35/: F-35_Lightning_II.mtl
examples/simpleApp/: CMakeLists.txt  burnshaders  simpleApp.cpp
extlibs/GL/: glew.h
include/Burngine/: Burngine.hpp  Cleaner.hpp  Export.hpp  Graphics.hpp  OpenGL.hpp  System.hpp  Window.hpp
include/Burngine/Graphics/: Graphics.hpp  RenderTarget.hpp  Renderable.hpp  Renderable3D.hpp  Renderer.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Burngine/Graphics/Gui/: Font.hpp  GuiNode.hpp  Label.hpp  Rectangle.hpp  Sprite.hpp  Transformable2D.hpp
include/Burngine/Graphics/Scene/: Billboard.hpp  Camera.cpp  Camera.hpp  DirectionalLight.hpp  Instance.hpp  Material.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  Renderable.hpp  Scene.hpp  SceneNode.hpp  Skybox.hpp  SpotLight.hpp  StaticMeshNode.hpp  Transformable.hpp  Transformable3D.hpp
include/Burngine/Graphics/Shader/: BurnShaders.hpp  Shader.hpp
include/Burngine/Graphics/Texture/: BaseTexture.hpp  CascadedShadowMap.hpp  (+8 more)
include/Burngine/System/: Clock.hpp  Error.hpp  Lock.hpp  Math.hpp  Mutex.hpp  NonCopyable.hpp  NonInstancable.hpp  ReferenceCounter.hpp  Rotation.hpp  RotationUtil.cpp  RotationUtil.hpp  String.hpp  String.inl  StringNumbers.hpp  System.hpp  Thread.hpp  ThreadLocalPtr.cpp  ThreadLocalPtr.hpp  Time.hpp  Timer.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl
include/Burngine/Window/: Context.hpp  Event.hpp  GlEntity.hpp  Keyboard.hpp  VideoMode.hpp  Window.hpp  WindowHandle.hpp
include/GL/: glew.h  glxew.h  wglew.h
include/glm/: ext.hpp  glm.hpp
include/glm/core/: _detail.hpp  _swizzle.hpp  _swizzle_func.hpp  dummy.cpp  func_common.hpp  func_exponential.hpp  func_geometric.hpp  func_integer.hpp  func_matrix.hpp  func_noise.hpp  func_packing.hpp  func_trigonometric.hpp  func_vector_relational.hpp  hint.hpp  intrinsic_common.hpp  intrinsic_exponential.hpp  intrinsic_geometric.hpp  intrinsic_matrix.hpp  intrinsic_trigonometric.hpp  intrinsic_vector_relational.hpp  setup.hpp  type.hpp  type_float.hpp  type_gentype.hpp  type_half.hpp  type_int.hpp  type_mat.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_size.hpp  type_vec.hpp  type_vec1.hpp  type_vec2.hpp  (+2 more)
include/glm/gtc/: constants.hpp  epsilon.hpp  half_float.hpp  matrix_access.hpp  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  noise.hpp  quaternion.hpp  random.hpp  reciprocal.hpp  swizzle.hpp  type_precision.hpp  type_ptr.hpp  ulp.hpp
include/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_cast.hpp  color_space.hpp  color_space_YCoCg.hpp  compatibility.hpp  component_wise.hpp  constants.hpp  euler_angles.hpp  extend.hpp  extented_min_max.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  inertia.hpp  int_10_10_10_2.hpp  integer.hpp  intersect.hpp  log_base.hpp  matrix_cross_product.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  mixed_product.hpp  multiple.hpp  norm.hpp  normal.hpp  normalize_dot.hpp  number_precision.hpp  ocl_type.hpp  optimum_pow.hpp  orthonormalize.hpp  perpendicular.hpp  polar_coordinates.hpp  projection.hpp  quaternion.hpp  (+15 more)
include/glm/virtrev/: xstream.hpp
src/: CMakeLists.txt
src/Burngine/: CMakeLists.txt  Cleaner.cpp
src/Burngine/Graphics/: CMakeLists.txt  RenderTarget.cpp  Renderable.cpp  Renderable3D.cpp  Renderer.cpp  Transformable.cpp  Transformable3D.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Burngine/Graphics/Gui/: CMakeLists.txt  Font.cpp  GuiNode.cpp  Label.cpp  Rectangle.cpp  Sprite.cpp  Transformable2D.cpp
src/Burngine/Graphics/Scene/: AssetLoader.cpp  AssetLoader.hpp  Billboard.cpp  CMakeLists.txt  Camera.cpp  DirectionalLight.cpp  Instance.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  ModelLoader.hpp  PointLight.cpp  Renderable.cpp  Scene.cpp  SceneNode.cpp  Skybox.cpp  SpotLight.cpp  StaticMeshNode.cpp  TextureStack.cpp  Transformable.cpp  Transformable3D.cpp
src/Burngine/Graphics/Scene/AssetLoader/: AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt
src/Burngine/Graphics/Scene/AssetLoaders/: CMakeLists.txt  ObjLoader.cpp  ObjLoader.hpp
src/Burngine/Graphics/Shader/: BurnShaders.cpp  CMakeLists.txt  Shader.cpp  Shader.hpp
src/Burngine/Graphics/Texture/: BaseTexture.cpp  CMakeLists.txt  CascadedShadowMap.cpp  CubeMap.cpp  Framebuffer.cpp  RenderTexture.cpp  SOIL.h  ShadowMap.cpp  Texture.cpp  Texture2D.cpp  TextureLoader.cpp  TextureLoader.hpp  TextureStack.cpp
src/Burngine/Graphics/Texture/PostEffect/: Blur.cpp  CMakeLists.txt  Glow.cpp
src/Burngine/System/: CMakeLists.txt  Clock.cpp  Error.cpp  Lock.cpp  Mutex.cpp  NonCopyable.cpp  NonInstancable.cpp  ReferenceCounter.cpp  Rotation.cpp  RotationUtil.cpp  String.cpp  StringNumbers.cpp  Thread.cpp  Time.cpp  Timer.cpp
src/Burngine/Window/: CMakeLists.txt  Context.cpp  Event.cpp  GlContext.cpp  GlContext.hpp  GlEntity.cpp  Keyboard.cpp  VideoMode.cpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/Burngine/Window/Unix/: CMakeLists.txt  WindowImplX11.cpp  WindowImplX11.hpp
src/Burngine/Window/Win32/: CMakeLists.txt  KeyboardImplWin32.cpp  KeyboardImplWin32.hpp  WglContext.cpp  WglContext.hpp  WindowImplWin32.cpp  WindowImplWin32.hpp
src/pthread/: pthread.h  sched.h  semaphore.h
(+4 files in other folders)
